--- a/server/public/css/managesessions.css
+++ b/server/public/css/managesessions.css
@@ -184,17 +184,16 @@ a:focus {
     .nav-tabs>li>a{
         font-size: 18px;
     }
-
 }
 
-@media (max-width: 402px) {
+@media (max-width: 407px) {
     .nav-tabs>li>a{
         font-size: 16px;
     }
 
 }
 
-@media (max-width: 374px) {
+@media (max-width: 379px) {
     .nav-tabs>li>a{
         font-size: 14px;
     }
@@ -204,6 +203,13 @@ a:focus {
 @media (max-width: 349px) {
     .nav-tabs>li>a{
         font-size: 12px;
+    }
+
+}
+
+@media (max-width: 322px) {
+    .nav-tabs>li>a{
+        font-size: 11px;
     }
 
 }
@@ -349,6 +355,15 @@ input[type="date"]
     max-width: 150px;
 }
 
+@media (max-width: 768px){
+    .thumbnail_my_videos{
+        width: 100px !important;
+        height: 60px;
+        max-height: 150px;
+        max-width: 150px;
+    }
+}
+
 .col6_thumbnail_my_videos{
     width: 150px !important;
     padding-left: 0px;
@@ -433,8 +448,69 @@ label {
     }
 }
 
+/*** Tamanhos das letras ***/
+
+@media (max-width: 495px){
+    #ObservacoesRelevantes{
+        font-size: 12px;
+    }
+    .checkbox-inline2{
+        font-size: 12px;
+    }
+    .radio-inline{
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 375px){
+    #ObservacoesRelevantes{
+        font-size: 10px;
+    }
+    .checkbox-inline2{
+        font-size: 10px;
+    }
+    .radio-inline{
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 379px){
+    #dados-sessao{
+        font-size: 14px;
+    }
+    #obs-sessao{
+        font-size: 14px;
+    }
+}
+
 /***** Tab Balanço final *****/
 .disabled {
-    pointer-events:none; //This makes it not clickable
-    opacity:0.6;         //This grays it out to look disabled
+    pointer-events:none; /*This makes it not clickable*/
+    opacity:0.6;         /*This grays it out to look disabled*/
+}
+
+/********* Na procura de videos **********/
+
+@media (max-width: 768px){
+    .textsmaller{
+        font-size: 14px;
+    }
+}
+
+/************* Btao procurar *********/
+
+.input-group-text{
+    background-color: #7e7e7e;
+    color: white;
+    
+}
+.input-group-text:hover{
+    background-color: #f5dbcf;
+    color: #7e7e7e;
+    -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+  /* ...and now for the proper property */
+  transition:.3s;
 }
